<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.theme.fragments.AlarmFragment">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="5000dp"
            android:background="@color/black"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:weightSum="2"
                    android:layout_gravity="center"
                    android:background="#2E2C2C">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm"
                            android:layout_marginStart="40dp"
                            android:textSize="30sp"
                            android:gravity="center"
                            android:textColor="#F4F4F4"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="160dp"
                        android:background="@drawable/baseline_add_24"
                        android:id="@+id/addAlarm"
                        android:contentDescription="@string/to_set_alarm" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginTop="1dp"
                android:background="#2E2C2C"
                android:gravity="center"
                android:orientation="horizontal">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="12:00 AM"
                        android:id="@+id/alarmTime"
                        android:padding="20dp"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
<!--                <ToggleButton-->
<!--                    android:id="@+id/toggle"-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="75dp"-->
<!--                    android:background="@drawable/baseline_toggle_on_24"-->
<!--                    android:tooltipText="On/Off"/>-->
<!--                android:textOn=""-->
<!--                android:textOff=""-->
<!--                android:focusable="false"-->
<!--                android:focusableInTouchMode="false"-->
<!--                android:layout_centerVertical="true"-->
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:id="@+id/alarmToggle"
                    android:padding="5dp"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    android:layout_marginStart="70dp"
                    android:thumb="@drawable/click_toggle"
                    app:showText="true"
                    app:track="@drawable/toggle_drawable" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</layout>
