<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.theme.fragments.WorldClockFragment">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="5000dp"
            android:background="@color/black"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2E2C2C"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/world_clock"
                    android:textColor="#F4F4F4"
                    android:textSize="30sp"
                    />
            </LinearLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="#2E2C2C"
                android:gravity="center"
                android:orientation="vertical">
                <!--            <androidx.recyclerview.widget.RecyclerView-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:id="@+id/rcView"-->
                <!--                tools:listitem="@layout/rc_worldclock"/>-->
                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="180dp"
                    android:layout_height="49dp"
                    android:contentDescription="Timer spinner"
                    android:layout_marginTop="2dp"/>
                <!-- style="@style/SpinnerTheme"-->
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="170dp"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="#2E2C2C"
                    app:cardElevation="50dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/city_zone"
                                android:textColor="#F4F4F4"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gmt"
                                android:textColor="#F4F4F4"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="45sp"
                            android:text="0:0"
                            android:textColor="#F4F4F4"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</layout>
